--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="asssets/css/style.css">
 </head>
 
-<body>
-    <header id="header">
+<body class="main_page">
+    <header id="header" >
         <div class="container">
             <div class="header__wrap">
                 <div class="header__left">
@@ -405,7 +405,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="main_catalog__slide__btn">
+                                        <button class="main_catalog__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -467,7 +467,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="main_catalog__slide__btn">
+                                        <button class="main_catalog__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -529,7 +529,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="main_catalog__slide__btn">
+                                        <button class="main_catalog__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -591,7 +591,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="main_catalog__slide__btn">
+                                        <button class="main_catalog__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -653,7 +653,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="main_catalog__slide__btn">
+                                        <button class="main_catalog__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -715,7 +715,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="main_catalog__slide__btn">
+                                        <button class="main_catalog__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -878,7 +878,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -940,7 +940,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -1002,7 +1002,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -1064,7 +1064,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -1126,7 +1126,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -1188,7 +1188,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -1250,7 +1250,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -1312,7 +1312,7 @@
                                         </div>
                                     </div>
                                     <div class="right">
-                                        <button class="catalog_two__slide__btn">
+                                        <button class="catalog_two__slide__btn addproduct_popup__open">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none">
                                                 <path
@@ -2799,14 +2799,17 @@
             </div>
         </div>
     </div>
+    <div class="popup_bg"></div>
     <script>
         function openMenu() {
             $('.mobile_menu').addClass('open');
+            $('.popup_bg').addClass('open');
             $('body').addClass('no-scroll');
         }
 
         function closeMenu() {
             $('.mobile_menu').removeClass('open');
+            $('.popup_bg').removeClass('open');
             $('body').removeClass('no-scroll');
         }
 
@@ -2820,6 +2823,118 @@
             }
         });
     </script>
+    <div class="addproduct_popup">
+        <div class="addproduct_popup__container">
+            <button class="addproduct_popup__close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
+                    <path d="M8.5 8L24.5 24M24.5 8L8.5 24" stroke="white" stroke-width="1.33333"
+                        stroke-linecap="round" />
+                </svg>
+            </button>
+            <div class="addproduct_popup__wrap">
+                <form action="">
+                    <div class="addproduct_popup__color">
+                        <div class="name">
+                            Цвет
+                        </div>
+                        <div class="content">
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="color-2" name="color" value="color2">
+                                <label for="color-2">
+                                    <img src="asssets/images/color.png" alt="">
+                                </label>
+                            </div>
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="color-3" name="color" value="color3">
+                                <label for="color-3">
+                                    <img src="asssets/images/color.png" alt="">
+                                </label>
+                            </div>
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="color-4" name="color" value="color4">
+                                <label for="color-4">
+                                    <img src="asssets/images/color.png" alt="">
+                                </label>
+                            </div>
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="color-5" name="color" value="color5">
+                                <label for="color-5">
+                                    <img src="asssets/images/color.png" alt="">
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="addproduct_popup__size">
+                        <div class="name">
+                            Размер
+                        </div>
+                        <div class="content">
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="size-1" name="size" value="size">
+                                <label for="size-1">41</label>
+                            </div>
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="size-2" name="size" value="size">
+                                <label for="size-2">42</label>
+                            </div>
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="size-3" name="size" value="size">
+                                <label for="size-3">43</label>
+                            </div>
+                            <div class="radio">
+                                <input class="custom-radio" type="radio" id="size-4" name="size" value="size">
+                                <label for="size-4">44</label>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="" class="addproduct_popup__btn">
+                        Добавить в корзину
+                    </a>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script>
+        function openAddProduct() {
+            $('.addproduct_popup').addClass('active');
+            $('body').addClass('no-scroll');
+        }
+
+        function closeAddProduct() {
+            $('.addproduct_popup').removeClass('active');
+            $('body').removeClass('no-scroll');
+        }
+
+        $('.addproduct_popup__open').on('click', function (event) {
+            event.preventDefault();
+            openAddProduct();
+        });
+
+        $('.addproduct_popup__close').on('click', function (event) {
+            event.preventDefault();
+            closeAddProduct();
+        });
+
+    </script>
+    <div class="roll_popup">
+        <div class="roll_popup__container">
+            <button class="roll_popup__close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" fill="none">
+                    <path d="M8.5 8.5L24.5 24.5M24.5 8.5L8.5 24.5" stroke="white" stroke-width="1.33333"
+                        stroke-linecap="round" />
+                </svg>
+            </button>
+            <div class="roll_popup__wrap">
+                <div class="roll_popup__left">
+
+                </div>
+                <div class="roll_popup__right">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <script src="asssets/js/app.js"></script> -->
 </body>
 
 </html>
