--- a/construktor2.html
+++ b/construktor2.html
@@ -417,7 +417,9 @@
                                     </div>
                                 </div>
                             </div>
-                            
+                            <a href="" class="construkrot_page__product__add_btn">
+                                Добавить комплект в корзину
+                            </a>
                         </div>
                         <a href="" class="construkrot_page__product__add_btn_mobile">
                             Добавить комплект в корзину
